--- a/multiplayer-server.vcxproj.filters
+++ b/multiplayer-server.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="ConnectionListener.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Socket.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
