--- a/multiplayer-server.vcxproj
+++ b/multiplayer-server.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionListener.hpp" />
+    <ClInclude Include="Socket.hpp" />
     <ClInclude Include="SocketStack.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
