--- a/multiplayer-server.vcxproj
+++ b/multiplayer-server.vcxproj
@@ -143,18 +143,22 @@
     <ClCompile Include="NetworkServer.cpp" />
     <ClCompile Include="EventBus.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PacketProcessor.cpp" />
+    <ClCompile Include="PacketType.cpp" />
     <ClCompile Include="PingListener.cpp" />
-    <ClCompile Include="SocketWrapper.cpp" />
-    <ClCompile Include="SocketStack.cpp" />
+    <ClCompile Include="ClientConnection.cpp" />
+    <ClCompile Include="ConnectionStack.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NetworkServer.hpp" />
     <ClInclude Include="Events.hpp" />
     <ClInclude Include="EventBus.hpp" />
     <ClInclude Include="IEventListener.hpp" />
+    <ClInclude Include="PacketProcessor.hpp" />
+    <ClInclude Include="PacketType.hpp" />
     <ClInclude Include="PingListener.hpp" />
-    <ClInclude Include="SocketWrapper.hpp" />
-    <ClInclude Include="SocketStack.hpp" />
+    <ClInclude Include="ClientConnection.hpp" />
+    <ClInclude Include="ConnectionStack.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
