--- a/multiplayer-server.vcxproj.filters
+++ b/multiplayer-server.vcxproj.filters
@@ -13,20 +13,23 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\listeners">
-      <UniqueIdentifier>{706d8cb9-29e2-46bd-b757-0fab782f260b}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\events">
       <UniqueIdentifier>{3a86203a-560c-4d2a-a39a-a7b70f2a4767}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\listeners">
-      <UniqueIdentifier>{3bac6e42-a815-40dc-bc55-a96810c7280b}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\packets">
       <UniqueIdentifier>{2c46356c-6a9b-4528-a6a9-c8a759e82398}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\packets">
       <UniqueIdentifier>{1779ba0d-8a48-4820-a6bd-4dc41a01e540}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\events">
+      <UniqueIdentifier>{dde3ebbe-ed16-4e71-9f08-1d8e64f3d5f2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\events\listeners">
+      <UniqueIdentifier>{706d8cb9-29e2-46bd-b757-0fab782f260b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\events\listeners">
+      <UniqueIdentifier>{3bac6e42-a815-40dc-bc55-a96810c7280b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -43,13 +46,16 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PingListener.cpp">
-      <Filter>Source Files\listeners</Filter>
+      <Filter>Source Files\events\listeners</Filter>
     </ClCompile>
     <ClCompile Include="PacketType.cpp">
       <Filter>Source Files\packets</Filter>
     </ClCompile>
     <ClCompile Include="PacketProcessor.cpp">
       <Filter>Source Files\packets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\multiplayer-zelda-clone\EventBus.cpp">
+      <Filter>Source Files\events</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -63,7 +69,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PingListener.hpp">
-      <Filter>Header Files\listeners</Filter>
+      <Filter>Header Files\events\listeners</Filter>
     </ClInclude>
     <ClInclude Include="EventBus.hpp">
       <Filter>Header Files\events</Filter>
@@ -78,6 +84,9 @@
       <Filter>Header Files\packets</Filter>
     </ClInclude>
     <ClInclude Include="PacketProcessor.hpp">
+      <Filter>Header Files\packets</Filter>
+    </ClInclude>
+    <ClInclude Include="PacketBuilder.hpp">
       <Filter>Header Files\packets</Filter>
     </ClInclude>
   </ItemGroup>
